--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
     </div>
 </div>*@
 
+
 <div class="row">
     <div class="col-md-2">
         <ul id="sidebar" class="nav nav-stacked affix">
@@ -33,9 +34,9 @@
     </div>
     <div class="col-md-10">
         <div id="rightColumn">
-            <form action="/Search" method="get">
-                <input type="text" name="searchQuery" />
-                <input type="submit" value="Enter"/>
+            <form method="POST">
+                <input type="text" name="search" />
+                <input type="submit" value="submit"/>
             </form>
         </div>
     </div>
