--- a/MovieApp/Views/Shared/_Layout.cshtml
+++ b/MovieApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; @DateTime.Now.Year - chris</p>
+        @*<p>&copy; @DateTime.Now.Year - chris</p>*@
     </footer>
 </div>
 
